syntax = "proto3";

package proto;

option go_package = "api/proto";

service UserService {
  rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse);
  rpc LoginUser (LoginUserRequest) returns (LoginUserResponse);
  rpc GetUserByID (GetUserByIDRequest) returns (GetUserByIDResponse); // ✅ Added this method
}

// ✅ Register User
message RegisterUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message RegisterUserResponse {
  string message = 1;
}

// ✅ Login User
message LoginUserRequest {
  string email = 1;
  string password = 2;
}

message LoginUserResponse {
  uint32 user_id = 1;
  string name = 2;
  string email = 3;
}

// ✅ Fetch User by ID (New)
message GetUserByIDRequest {
  uint32 user_id = 1;
}

message GetUserByIDResponse {
  uint32 user_id = 1;
  string name = 2;
  string email = 3;
}
